<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:padding="10dp">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:background="@drawable/help_heading"-->
                <!--android:gravity="center|start"-->
                <!--android:padding="5dp"-->
                <!--android:text="Information Entry Page"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="23sp" />-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/ed_border"-->
                <!--android:padding="5dp"-->
                <!--android:text="@string/info_entry"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--android:textSize="18sp" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/help_heading"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="Subject Entry Page"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_border"
                android:padding="5dp"
                android:text="@string/subject_entry"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/help_heading"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="Timetable Entry Page"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_border"
                android:padding="5dp"
                android:text="@string/timetable_entry"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/help_heading"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="Status Entry Page"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_border"
                android:padding="5dp"
                android:text="@string/status_entry"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/help_heading"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="Main Page"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_border"
                android:padding="5dp"
                android:text="@string/main_page"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/help_heading"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="Today's Attendance Page"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_border"
                android:padding="5dp"
                android:text="@string/today_attendance"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/help_heading"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="Goto Page"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_border"
                android:padding="5dp"
                android:text="@string/goto_page"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>